Kubernet/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend-api
  template:
    metadata:
      labels:
        app: backend-api
    spec:
      containers:
        - name: backend
          image: gcr.io/interview-ai-482614/backend:PLACEHOLDER
          imagePullPolicy: Always
          ports:
            - containerPort: 5000
